--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.9.5",
-    "hbs": "^2.7.0"
+    "hbs": "^2.7.0",
+    "mongoose": "^3.8.17",
+    "body-parser": "^1.9.0"
   },
   "devDependencies": {},
   "scripts": {
