--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "A simple Contact List",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.9.0",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.3.3",
     "express": "^4.9.5",
+    "express-session": "^1.9.1",
     "hbs": "^2.7.0",
     "mongoose": "^3.8.17",
-    "body-parser": "^1.9.0"
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
